--- a/src/app/(non-home)/events/Events.scss
+++ b/src/app/(non-home)/events/Events.scss
@@ -1,30 +1,46 @@
-@media screen and (max-width: 767px) {
-  .events_page {
-    margin-inline: auto;
-    max-width: 2000px;
-    margin-block: 1rem;
+.events_page {
+  margin-inline: auto;
+  max-width: 2000px;
+  margin-block: 1rem;
+  margin-inline: 1.5rem;
 
-    h1 {
-      margin-block: 5rem;
+  @media (min-width: $mobile-breakpoint) {
+    margin-inline: $main-padding-desktop;
+  }
+
+  h1 {
+    margin-block: 5rem;
+    font-size: clamp(2em, calc(24px + 1.5vw), 4em);
+  }
+
+  h2 {
+    font-size: clamp(1.2em, calc(18px + 1.3vw), 32px);
+  }
+
+  .events-container {
+    margin: 1rem 0;
+    margin-bottom: 1rem;
+    display: grid;
+    gap: 2.5rem;
+    row-gap: 1rem;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+
+    // Prevents it from expanding to 4 cards per row
+    @media (min-width: 1500px) {
+      grid-template-columns: repeat(3, 1fr);
     }
-
-    .events-container {
-      margin: 1rem 0;
-      margin-bottom: 1rem;
-      display: grid;
-      gap: 2.5rem;
-      grid-template-columns: repeat(1, 1fr);
-      row-gap: 1rem;
-    }
-
-    margin-inline: 1.5rem;
-    margin-block: 1rem;
   }
 
   .button-container {
     display: flex;
     flex-direction: column;
     margin-block: 2rem;
+    gap: 0.5rem;
+
+    @media (min-width: $mobile-breakpoint) {
+      flex-direction: row;
+      gap: 1rem;
+    }
 
     button {
       --text-color: black;
@@ -39,71 +55,12 @@
       font-family: $heading-font;
       font-weight: 700;
       cursor: pointer;
+      width: fit-content;
 
       &.active {
         --text-color: white;
         --background-color: black;
       }
-    }
-  }
-}
-
-@media screen and (min-width: 767px) {
-  .events_page {
-    margin-inline: auto;
-    max-width: 2000px;
-    margin-block: 1rem;
-
-    h1 {
-      padding-block: 5rem;
-      padding-bottom: 8rem;
-    }
-
-    padding-inline: clamp(24px, 5px + 5vw, 6rem);
-    margin-block: 1rem;
-
-    .upcoming-event {
-      color: white;
-      background-color: #191919;
-      padding: 2rem 0;
-
-      h2 {
-        margin-left: 1rem;
-      }
-    }
-
-    .button-container {
-      display: flex;
-      gap: 1rem;
-      padding: 2rem 0;
-
-      button {
-        --text-color: black;
-        --background-color: white;
-        color: var(--text-color);
-        background-color: var(--background-color);
-        border: 1.5px solid var(--text-color);
-        border-radius: 40px;
-        padding: 0.4rem 1rem 0.5rem;
-        font-size: 1.1rem;
-        font-family: $heading-font;
-        font-weight: 700;
-        cursor: pointer;
-
-        &.active {
-          --text-color: white;
-          --background-color: black;
-        }
-      }
-    }
-
-    .events-container {
-      margin: 1rem 0;
-      margin-bottom: 1rem;
-      display: grid;
-      gap: 2.5rem;
-      grid-template-columns: repeat(3, 1fr);
-      row-gap: 1rem;
     }
   }
 }
