--- a/src/app/components/Footer/Footer.scss
+++ b/src/app/components/Footer/Footer.scss
@@ -1,6 +1,6 @@
 footer {
   text-align: center;
-  padding-inline: $nav-padding-mobile;
+  padding-inline: $main-padding-mobile;
   padding-bottom: 2rem;
   margin-inline: auto;
   max-width: 2000px;
