--- a/src/app/components/Navbar/Hamburger/Hamburger.scss
+++ b/src/app/components/Navbar/Hamburger/Hamburger.scss
@@ -3,7 +3,7 @@
   position: absolute;
   padding: 0;
   margin-block: var(--nav-padding-block);
-  margin-inline: $nav-padding-mobile;
+  margin-inline: $main-padding-mobile;
   right: 0;
   top: 0;
   display: inline-block;
