--- a/src/app/components/Navbar/Navbar.scss
+++ b/src/app/components/Navbar/Navbar.scss
@@ -10,7 +10,7 @@ nav {
     justify-content: space-between;
     align-items: center;
     padding-block: var(--nav-padding-block);
-    padding-inline: $nav-padding-mobile;
+    padding-inline: $main-padding-mobile;
     font-family: $heading-font;
     font-size: 18px;
     color: var(--color);
