--- a/src/app/styles/variables.scss
+++ b/src/app/styles/variables.scss
@@ -10,8 +10,8 @@ $tablet-breakpoint: 1366px;
 $nav-padding-mobile: 24px;
 $nav-padding-desktop: 36px;
 
-$main-padding-mobile: clamp(1rem, 0.5rem + 6vw, 5rem);
-$main-padding-desktop: clamp(24px, 0.5rem + 8vw, 10rem);
+$main-padding-mobile: clamp(1.5rem, calc(0.5rem + 4vw), 5rem);
+$main-padding-desktop: clamp(1.5rem, calc(0.5rem + 6vw), 10rem);
 
 //Font Sizes
 $h1-size: 3.25rem;
